@@ -11,16 +11,15 @@ plugins {
 	id 'application' // uses also plugin 'java'
     id 'eclipse'
     id 'org.openjfx.javafxplugin' version '0.0.8'
-    id 'org.beryx.jlink' version '2.12.0'
+    id 'org.beryx.jlink' version '2.17.0'
 }
 
 group 'fr.omathe'
 project.version '1.3.2'
 
 def jdk = System.getProperty('java.home')
-//def jdk = 'C:/oma/soft/java/jdk-13'
 def moduleName = 'fr.omathe.restui'
-def mainClass = moduleName + '/gui.RestUiApp'
+def mainClass = moduleName + '.gui.RestUiApp'
 mainClassName = mainClass
 
 compileJava.options.encoding = 'UTF-8'
@@ -40,32 +39,6 @@ javafx {
 	version = '13'
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web' ]
 }
-
-/* useful for java9
-compileJava {
-    inputs.property("moduleName", moduleName)
-    doFirst {
-        options.compilerArgs = [
-            '--module-path', classpath.asPath,
-        ]
-        classpath = files()
-    }
-}
-*/
-//compileJava.dependsOn updateSource
-
-/*compileTestJava {
-    inputs.property("moduleName", moduleName)
-    doFirst {
-        options.compilerArgs = [
-            '--module-path', classpath.asPath,
-            '--add-modules', 'org.junit.jupiter.api',
-            '--add-reads', "$moduleName=org.junit.jupiter.api",
-            '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
-        ]
-        classpath = files()
-    }
-}*/
 
 jar {
 	//inputs.property("moduleName", moduleName)
@@ -112,21 +85,6 @@ task fatJar(type: Jar) {
     with jar
 }
 
-/*eclipse {
-	classpath {
-		downloadSources=true
-		
-		// move libraries to modulepath
-		file {
-            whenMerged {
-// <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_91"/>            
-            	entries.removeAll { it.kind == 'con' && it.path == 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-10/' }
-                entries.findAll { it.kind == 'lib' }.each { it.entryAttributes['module'] = 'true' }
-            }
-        }
-	}
-}*/
-
 eclipse {
 	classpath {
 		downloadSources=true
@@ -144,6 +102,11 @@ eclipse {
 
 jlink {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    
+    mergedModule {
+    	requires 'java.xml';
+	}
+    
     launcher {
         name = 'RestUI'
     }
